--- a/error.html
+++ b/error.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pvSM2UyBODIAX-bbgWg&oh=6a20774afbc602ce2b45b83e1f0d07e4&oe=5E8E2ECE" alt="Муцин Улитки."></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/70205017_542848953187344_3076263629905985536_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=xeDHvHr_JTIAX9MNR-Z&oh=0d56a5489b6652baf4e3667903c953a1&oe=5E8E2ECE" alt="Муцин Улитки."></div>
 							<div class="header__logo-txt">ulitochka_eco_farm</div>
 						</a>
 						<div class="header__title">Муцин Улитки.</div>
@@ -114,27 +114,27 @@
 							<a href="./posts/./my-vmeste-s-xvxkonovalov-kak-vsegda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>73</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>75</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=pMD9zRycrBkAX_7k2Jb&oh=3c666cff69373b8204b6e4343f541764&oe=5E831D90" alt="Мы вместе с @v_konovalov как всегда,">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84447085_1111430125855918_8414975268671877222_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=TMvcA91tS9sAX958L1b&oh=93a478a6908961822e3967b082768495&oe=5E831D90" alt="Мы вместе с @v_konovalov как всегда,">
 							</div>
 							<div class="article-more__item-name">Мы вместе с @v_konovalov как всегда,</div>
 						</a>
 							<a href="./posts/./xxdlya-ulitki-eyo-mutsin.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>62</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>64</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=jJyHA0VwRhYAX9cZ5xL&oh=f66d4544af9159e9d34d7a689f20af47&oe=5E8AEBEC" alt="💧Для улитки её муцин">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=jJyHA0VwRhYAX8n8L_y&oh=7221467fa9dc6dd1806c764529e0fa64&oe=5E981AEC" alt="💧Для улитки её муцин">
 							</div>
 							<div class="article-more__item-name">💧Для улитки её муцин</div>
 						</a>
 							<a href="./posts/./fevral--my-provedyom-v-puteshestvii.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>62</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>63</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=177N6OPY-80AX-cay7M&oh=85e6db6bed65a3fbcaae28a2d75d2ebb&oe=5E83D399" alt="Февраль мы проведём в путешествии.">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=177N6OPY-80AX_GWH6M&oh=c381873cd4a60ce4427cf00db4f7c5d1&oe=5E83D399" alt="Февраль мы проведём в путешествии.">
 							</div>
 							<div class="article-more__item-name">Февраль мы проведём в путешествии.</div>
 						</a>
@@ -143,7 +143,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>59</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=lQLSOpa9emQAX-LTiCI&oh=c00ae9250095b7710fa3a741faa8fe3d&oe=5E81966E" alt="Вот и отшумели праздники!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/79791136_170797607360733_4651297341076769481_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=lQLSOpa9emQAX9jneYT&oh=c120914a1615bc98c05c692e7a37e393&oe=5E8EC56E" alt="Вот и отшумели праздники!">
 							</div>
 							<div class="article-more__item-name">Вот и отшумели праздники!</div>
 						</a>
@@ -152,36 +152,36 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>55</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GtFH8ZAe1UsAX9Hcdk-&oh=42f668a33a88730fde61920dbbe2fe32&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/80900696_114521346564401_8003277424207151392_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=GtFH8ZAe1UsAX89-V_f&oh=cab0ece8af34a205d483a2547154def5&oe=5E82CF36" alt="О том как мы строили шоурум, он же дегустационный">
 							</div>
 							<div class="article-more__item-name">О том как мы строили шоурум, он же дегустационный</div>
 						</a>
 							<a href="./posts/./kak-pravil-no-razvodit--mutsin.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>46</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>47</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=evSo7-NBorEAX8w_TxW&oh=14996019c29b1fd5673b8ba302b22d76&oe=5E81A420" alt="Как правильно разводить муцин.">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894124_614325229384854_8722471482158176743_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=evSo7-NBorEAX8c7rBB&oh=afe88931813c0af1b185f0a95c36dbd2&oe=5E8ED320" alt="Как правильно разводить муцин.">
 							</div>
 							<div class="article-more__item-name">Как правильно разводить муцин.</div>
+						</a>
+							<a href="./posts/./rekomendatsiya-po-ispol-zovaniyu-dlya-budushchikh.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84959595_106754950786568_1129629903431629195_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=yCN7_aKYJNcAX_gz9n5&oh=58e0864056ac7efef8447df51fc177cf&oe=5E8E44CF" alt="Рекомендация по использованию для будущих">
+							</div>
+							<div class="article-more__item-name">Рекомендация по использованию для будущих</div>
 						</a>
 							<a href="./posts/./pro-ulitkin-domik-xx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=idCIi4kMZ7AAX8T4sEt&oh=4f585fbfac21c2dceabdab7fa64d0132&oe=5E89E803" alt="Про улиткин домик 🐚">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82965605_557510658179105_2292549139955388895_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=idCIi4kMZ7AAX-wL5Ge&oh=a9acfb0779176cb626e55d67917023c3&oe=5E89E803" alt="Про улиткин домик 🐚">
 							</div>
 							<div class="article-more__item-name">Про улиткин домик 🐚</div>
-						</a>
-							<a href="./posts/./segodnya-post-bez-informatsii-i-poleznostey.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>44</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=Ve2DfLOl01AAX9W4cCz&oh=aa3e7ac443b2ab2ce4b3f0f3b5ad7531&oe=5E8D7A4C" alt="Сегодня пост без информации и полезностей.">
-							</div>
-							<div class="article-more__item-name">Сегодня пост без информации и полезностей.</div>
 						</a>
 						</div>
 				</div>
