--- a/links.html
+++ b/links.html
@@ -341,9 +341,9 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 								<a href="./posts/./xx-kazhdyy-den--chto-to-novoe.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>78</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>79</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89599097_489819171923795_956639264642153939_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=CnlFoUNxa4IAX-sbt77&oh=1729aad240f3bfd8982dc7e9ffe96cfe&oe=5E9B83F7" alt="🌱 Каждый день что-то новое">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/89599097_489819171923795_956639264642153939_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=111&_nc_ohc=W98nWbxu7c4AX-XGrZN&oh=bc5d56d0e52363e897b197f97f402bd1&oe=5E9BA509" alt="🌱 Каждый день что-то новое">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -354,7 +354,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>73</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=SzG8GQgbAtUAX-oEOFJ&oh=cc344d23c440aeea67e4b4b374525589&oe=5EA549EC" alt="💧Для улитки её муцин">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/87233672_2474857519430515_7406042281458362914_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=SFpwJ-247_sAX8-jBhn&oh=d1b7ebd4d7ff55a821955c6876c7d248&oe=5EA549EC" alt="💧Для улитки её муцин">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -365,7 +365,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>67</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=vKpQtgLIDW4AX-ZwOtL&oh=0a1a6146bc7d1d76c220244dcd6fb6bc&oe=5E9E3199" alt="Февраль мы проведём в путешествии.">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83907039_2594494030836698_609898643171055656_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8BcNsSHmRHIAX9n1AEQ&oh=3d157884cbb4b3e80202e5769d38965b&oe=5E9E3199" alt="Февраль мы проведём в путешествии.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -398,7 +398,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>51</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84959595_106754950786568_1129629903431629195_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=nvzL6_dJsWIAX9Lh3Bn&oh=518d13b5ba95361201097914af37b57b&oe=5E9B73CF" alt="Рекомендация по использованию для будущих">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84959595_106754950786568_1129629903431629195_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=108&_nc_ohc=nvzL6_dJsWIAX9Lh3Bn&oh=0e384d0b125b50cf3bde7c8ad9049042&oe=5EA8A2CF" alt="Рекомендация по использованию для будущих">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
@@ -409,7 +409,7 @@ color: #FFFFFF;--btn-txt-color: #FFFFFF;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>48</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=qplC_tjj8AsAX8vv6QV&oh=ac2e38c8a9ce9c35818f2134d5d5958e&oe=5E9AA94C" alt="Сегодня пост без информации и полезностей.">
+										<img class="js-now-lazy" src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82285187_1019123675128274_5927152375484103026_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=qplC_tjj8AsAX8vv6QV&oh=8c8c1fa60fbecabd74a46bb714ff1ae9&oe=5E9F22B4" alt="Сегодня пост без информации и полезностей.">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #FFFFFF;
